[gd_scene load_steps=3 format=2]

[ext_resource path="res://Interface/Interface.tscn" type="PackedScene" id=1]
[ext_resource path="res://Test_Script.gd" type="Script" id=2]

[node name="Default_Scene" type="Node"]

[node name="Interface" parent="." instance=ExtResource( 1 )]

[node name="PhraseArrenger" type="Node" parent="."]
script = ExtResource( 2 )

[node name="PhraseControl" type="Control" parent="PhraseArrenger"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PhraseViewportContainer" type="ViewportContainer" parent="PhraseArrenger/PhraseControl"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PhraseViewport" type="Viewport" parent="PhraseArrenger/PhraseControl/PhraseViewportContainer"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3
